2002-05-07  James Tanis  <jtt@winwood.sysdetect.com>

	* include/libbk.h: BK_SWAP macro for swaping two values of any type.

2002-05-06  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_listnum.c (bk_listnum_destroy): Free up clc.

	* lib/b_general.c (bk_no_free): Function to do nothing but satisfy
	the compiler. Used for "freeing" that which was allocated with alloca(3).

	* lib/b_listnum.c (bk_listnum_get): Free head if error.
	(bk_listnum_destroy): Free mainl.

2002-05-03  Seth Robertson  <seth@yeah.baka.org>

	* src/bttcp.c (main): Don't fall through multicast looping to ttl.

2002-05-02  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_once): Unnecessary initialization that makes
	be feel better.
	(bk_run_poll_add): Uh, actually need to assign brfn after allocation

	* src/bttcp.c (main): Switch to dash versions of argument names,
	and while I'm at it, get rid of the spaces in a long option
	names...(hey it works!)

2002-05-01  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_stdsock.c (bk_stdsock_multicast): Move maddrgroup
	reference inside of maddrgroup protection

2002-05-01  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_atod): Use portable math functions

2002-05-01  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_string.c (bk_string_atod): Convert strings to doubles.
	(bk_string_atof): Convert strings to floats.

2002-04-30  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c: Run new callback state
	"BkAddrGroupStateSocket" every time a new socket() is created, to
	allow user opportunity to set socket options like multicast and
	broadcast.

	* src/bttcp.c: Enable UDP, multicast, and broadcast support, such
	as it is.

	* lib/b_stdsock.c: Support routines to turn on multicast and
	broadcast abilities for sockets.

2002-04-29  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_ioh.c: Revert "fix" made recently to allow ioh_close's